[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/heeeey.png" type="Texture" id=1]
[ext_resource path="res://idle 6 frames.tres" type="Animation" id=2]
[ext_resource path="res://Enemies/buneko3-Sheet.png" type="Texture" id=4]
[ext_resource path="res://NPC/mergulhador.gd" type="Script" id=5]

[sub_resource type="Animation" id=1]
resource_name = "New Anim"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1, 1.1, 1.2, 1.3, 2.4, 3.7, 4.1, 4.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 1, 6, 7, 9, 5 ]
}

[sub_resource type="Animation" id=2]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=3]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1.67968, 4.27632 )

[node name="mergulhador" type="StaticBody2D"]
position = Vector2( -225, -253 )
z_index = 1
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1, 2.66199 )
z_index = 1
texture = ExtResource( 4 )
hframes = 6
frame = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "New Anim (2)"
"anims/New Anim" = SubResource( 1 )
"anims/New Anim (2)" = SubResource( 2 )
"anims/idle 4 frames" = SubResource( 3 )
"anims/idle 6 frames" = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1, -1.90735e-06 )
scale = Vector2( 7.73959, 3.04 )
shape = SubResource( 4 )

[node name="QuestionMark" type="Sprite" parent="."]
position = Vector2( -0.943848, -23.1249 )
texture = ExtResource( 1 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
